@@ -1358,22 +1358,6 @@ when used in a document.
     But directives can have synonyms for convenience.  "format::
     python" was suggested, but "format" seems too generic.
 
-  - _`text.date`: Datestamp.  For substitutions.  The directive could
-    be followed by a formatting string, using strftime codes.  Default
-    is "%Y-%m-%d" (ISO 8601 date), but time fields can also be used.
-
-    - Combined with the "include" directive, implement canned macros?
-      E.g.::
-
-          .. include:: <macros>
-
-          Today's date is |date|.
-
-      Where "macros" contains ``.. |date| date::``, among others.
-
-  - _`text.time`: Timestamp.  For substitutions.  Shortcut for
-    ``.. date:: %H:%M``.  Date fields can also be used.
-
   - _`pysource.usage`: Extract a usage message from the program,
     either by running it at the command line with a ``--help`` option
     or through an exposed API.  [Suggestion for Optik.]
