@@ -35,6 +35,7 @@ directives = {
  u'\u0446\u0435\u043b\u0435\u0432\u044b\u0435-\u0441\u043d\u043e\u0441\u043a\u0438': 
  u'target-notes',
  u'unicode': u'unicode',
+ u'\u0434\u0430\u0442\u0430': u'date',
  u'\u0431\u043e\u043a\u043e\u0432\u0430\u044f-\u043f\u043e\u043b\u043e\u0441\u0430':
  u'sidebar',
  u'\u0432\u0430\u0436\u043d\u043e': u'important',
